opam-version: "2.0"
version: "0.2.0"
maintainer: "Julian Squires <julian@cipht.net>"
authors: ["Julian Squires <julian@cipht.net>"]
homepage: "http://github.com/tokenrove/tsdl-image"
dev-repo: "git://github.com/tokenrove/tsdl-image.git"
bug-reports: "http://github.com/tokenrove/tsdl-image/issues"
tags: [ "bindings" "graphics" ]
license: "BSD3"
depends: [
  "ocaml" {>= "4.01"}
  "ctypes" {>= "0.4.0"} "ctypes-foreign"
  "tsdl" {>= "0.9.0"}
  "result"
  "dune" {build & >= "1.11.0"}
]
depexts: [
  [["debian"] ["libsdl2-image-dev"]]
  [["ubuntu"] ["libsdl2-image-dev"]]
  [["osx" "homebrew"] ["sdl2_image"]]
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
synopsis: "Tsdl_image provides bindings to SDL2_Image intended to be used with Tsdl"
